--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
                 <span class="loading"></span>   
             </div>
             <div class="event received">
-                <iframe class='iframe-mobile-app' src='http://emigracion.xunta.gal/'></iframe>
+                <iframe class='iframe-mobile-app' src='http://localhost/233-019_GaliciaAberta/mobile-app'></iframe>
             </div>
         </div>
     </div>
