--- a/www/main.html
+++ b/www/main.html
@@ -49,7 +49,7 @@
                 <span class="loading"></span>   
             </div>
             <div class="event received">
-                <iframe class='iframe-mobile-app' src='http://emigracion.xunta.gal/mobile-app'></iframe>
+                <iframe class="iframe-mobile-app" frameborder="0" style="width:100%; height:100%;" src="http://emigracion.xunta.gal/mobile-app"></iframe>
             </div>
         </div>
     </div>
