--- a/www/main.html
+++ b/www/main.html
@@ -45,9 +45,7 @@
 <body>
     <div class="app">
         <div id="deviceready" class="blink">
-            <div class="event listening">
-                <span class="loading"></span>   
-            </div>
+            <div class="event listening"></div>
             <div class="event received">
                 <iframe class="iframe-mobile-app" frameborder="0" style="width:100%; height:100%;" src="http://emigracion.xunta.gal/mobile-app"></iframe>
             </div>
