--- a/platforms/ios/www/main.html
+++ b/platforms/ios/www/main.html
@@ -45,11 +45,9 @@
 <body>
     <div class="app">
         <div id="deviceready" class="blink">
-            <div class="event listening">
-                <span class="loading"></span>   
-            </div>
+            <div class="event listening"></div>
             <div class="event received">
-                <iframe class='iframe-mobile-app' src='http://emigracion.xunta.gal/mobile-app'></iframe>
+                <iframe class="iframe-mobile-app" frameborder="0" style="width:100%; height:100%;" src="http://emigracion.xunta.gal/mobile-app"></iframe>
             </div>
         </div>
     </div>
